# xtrade

./: .gitignore  Cargo.toml  config.toml  state.json  test1.sh  tradingview_alerts.txt
src/: README.md  app_config.rs  app_state.rs  cli.toml  config.rs  lib.rs  main.rs  message.rs  online.rs  server.toml  state.rs  updated_cli.rs
src/alert/: mod.rs  tradingview.rs
src/api/: listeners.rs  mod.rs
src/api/bots/: clients.rs  endpoints.rs  mod.rs
src/api/listeners/: endpoints.rs  mod.rs
src/bot/: README.md  api.rs  cli.rs  local_client.rs  mod.rs  model.rs  remote_client.rs  rest.rs  server.rs  state.rs  test.rs  view.rs
src/bot/api/: README.md  bots.rs  endpoints.rs  listeners.rs  mod.rs
src/bot/api_old/: mod.rs
src/bot/cli/: CLI.md  README.md  application_architecture.md  bot module2.md  cmd.rs  commands.rs  dispatch.rs  menu.rs  mod.rs  offline.rs  online.rs
src/bot/cli_old/: cmd.rs  commands.rs  menu.rs  mod.rs  offline.rs  online.rs
src/bot/state/: README.md  mod.rs  registry.rs  server.rs
src/bot/state/input/: mod.rs
src/bot/state/input/bot/: add.rs  deletes.rs  get.rs  list.rs  (+2 more)
src/bot/state/output/: mod.rs
src/cli/: commands.rs  handlers.rs  mod.rs  offline.rs  online.rs  server.rs
src/errors/: api.rs  app.rs  mod.rs  server.rs
src/exchange/: binance.rs  mod.rs
src/models/: bot.rs  listener.rs  mod.rs
src/services/: bots.rs  listeners.rs  mod.rs
src/state/: README.md  mod.rs  settings.md  settings.rs  state.rs
src/utils/: config.rs  logging.rs  mod.rs  validators.rs
src/webui/: Cargo.toml  Trunk.toml
src/webui/src/: lib.rs
(+11 files in other folders)
