[package]
name = "xtrade"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
config = "0.15.5"
dotenv = "0.15.0"
fern = "0.7.1"
log = "0.4.24"
chrono = "0.4.39"
async-trait = "0.1.85"
reqwest = { version = "0.12.12", features = ["blocking", "json", "rustls-tls"] }
rand = "0.8.5"
uuid = { version = "1.11.1", features = ["v4"] }
clap = { version = "4.5.26", features = ["derive"] }
colored = "3.0.0"
url = "2.5.4"

[dev-dependencies]
mockito = "1.6.1"
